RESOLVED FIXED278540
AX: Flakey failures in wpt.fyi Interop 2024 accessibility tests
https://bugs.webkit.org/show_bug.cgi?id=278540
Summary AX: Flakey failures in wpt.fyi Interop 2024 accessibility tests
Tyler Wilcock
Reported 2024-08-22 14:34:23 PDT
We suspect these flakey failures happen if WebDriver queries WebCore before the render tree has been built for the first time, meaning we aren't going to create accessibility objects correctly, resulting in an empty string result for computed role and computed label.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-22 14:34:32 PDT
Tyler Wilcock
Comment 2 2024-08-22 14:40:13 PDT
EWS
Comment 3 2024-08-23 08:43:40 PDT
Committed 282659@main (4900d7a90e6e): <https://commits.webkit.org/282659@main> Reviewed commits have been landed. Closing PR #32608 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.